# localhost

./: .gitignore  Cargo.toml  README.md  config.json  file.txt  todo.todo
cgi-bin/: script.py
cgi-bin/other/: server.py  template.php
public/: error.html  import.html  index.html  index2.html  list_dir.html  session.html  style.css
public/cgi-bin/: script.py
public/errors/: 404.html
src/: cgi.rs  cgi_handler.rs  config.rs  delete_file.rs  event_loop.rs  fff  file_upload.rs  http_request.rs  http_response.rs  lib.rs  main.rs  request_queue.rs  session.rs
