[package]
name = "localhost"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.168"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
multipart = "0.18.0"
urlencoding = "2.1.3"
lazy_static = "1.5.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
